[project]
name = "openclaw-ws-client"
version = "0.1.0"
description = "Python WebSocket client for OpenClaw Gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "pygithub>=2.9.0",
    "websockets>=12.0",
]

[project.scripts]
openclaw-ws = "client:main"
